src/objects/Histology__c.object
<CustomObject>
    <fields>
        <fullName>Is_DCIS_Present__c</fullName>
        <label>Is DCIS Present?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Reported</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Is_LCIS_Present__c</fullName>
        <label>Is LCIS Present?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Reported</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Is_invasive_tumor_present__c</fullName>
        <label>Is invasive tumor present?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Reported</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Is_the_Results_Bening__c</fullName>
        <label>Is the Results Bening?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Reported</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Patient__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Patient</label>
        <referenceTo>Patient_Custom__c</referenceTo>
        <relationshipLabel>Histologys</relationshipLabel>
        <relationshipName>Histologys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pg_histology_Id__c</fullName>
        <label>pg_histology_Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>Histology</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Histology Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Histologys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>